@@ -1,3 +1,14 @@
+2003-11-07  pottendo  <pottendo@utanet.at>
+
+	* de.po: Updated.
+
+2003-11-06  pottendo  <pottendo@utanet.at>
+
+	* Makefile.in.in (datadir,localedir,gnulocaledir,gettextsrcdir): 
+	Added $(DESTDIR)
+
+	* de.po: Updated.
+
 2003-11-02  pottendo  <pottendo@utanet.at>
 
 	* de.po: Updated.
